bat.bool1.sleepin.SleepIn.scala.error
Compilation error:
SleepIn:3: error: not found: value weekend
  var res:Boolean = (vacation || (!weekend) )
                                   ^