bat.bool1.sleepin.SleepIn.scala.code
def sleepIn(weekday: Boolean, vacation: Boolean): Boolean = {
  var res:Boolean = (vacation || (!weekend) )
  return res }